--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
 <body>
-    <div class="container">
+    <div class="container" data-bs-theme="dark">
         <div class="wrapper d-flex align-items-center justify-content-center h-100">
             <div class="card login-form">
                 <div class="card-body">
