--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="UTF-8">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -13,7 +13,7 @@
   </head>
 
 <body>
-    <div class="container" data-bs-theme="dark">
+    <div class="container">
         <div class="wrapper d-flex align-items-center justify-content-center h-100">
             <div class="card login-form">
                 <div class="card-body">
