Refactor HTML structure for login form

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 <body>
     <div class="container">
-        <div class="wrapper d-flex align-items-center justify-content-center h-100">
+        <!-- <div class="wrapper d-flex align-items-center justify-content-center h-100"> -->
+        <div class="d-flex align-items-center justify-content-center min-vh-100">
+  <div class="card login-form" style="width: 320px;">
             <div class="card login-form">
                 <div class="card-body">
                     <h5 class="card-title text-center">Login</h5>
