--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <title>Login</title>
+    <title>Secured Login</title>
   </head>
 
 <body>
     <div class="container">
         <!-- <div class="wrapper d-flex align-items-center justify-content-center h-100"> -->
-        <div class="d-flex align-items-center justify-content-center min-vh-100">
+        <div class="wrapper d-flex align-items-center justify-content-center min-vh-100">
   <div class="card login-form" style="width: 320px;">
             <div class="card login-form">
                 <div class="card-body">
-                    <h5 class="card-title text-center">Login</h5>
+                    <h5 class="card-title text-center">Secured Login</h5>
                     <form>
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label">Email</label>
