--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.0/css/all.min.css" integrity="sha384-/o6I2CkkWC//PSjvWC/eYN7l3xM3tJm8ZzVkCOfp//W05QcE3mlGskpoHB6XqI+B" crossorigin="anonymous">
     <title>Login</title>
   </head>
 
@@ -19,7 +20,11 @@
   <div class="card login-form" style="width: 320px;">
             <div class="card login-form">
                 <div class="card-body">
-                    <h5 class="card-title text-center">Login</h5>
+                    <!-- <h5 class="card-title text-center">Login</h5> -->
+                    <h5 class="card-title text-center">
+  <i class="fa-solid fa-lock" aria-hidden="true"></i>
+  <span class="visually-hidden">Login</span>
+                    </h5>
                     <form>
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label">Email</label>
